Fix inline wraping

--- a/src/Gui/resources/scss/ui/forms/_form-check.scss
+++ b/src/Gui/resources/scss/ui/forms/_form-check.scss
@@ -35,6 +35,7 @@
 
     &.inline {
         flex-direction: row;
+        flex-wrap: wrap;
     }
 }
 
